--- a/posts/api-journey-client-side.mdx
+++ b/posts/api-journey-client-side.mdx
@@ -1,6 +1,6 @@
 # API Journey – Client Side
 
-Previously we took a look at some backend technical behaviours in <Link href='/posts/api-journey-server-side'>API Journey – Server Side</Link>. Next we will take a look at the API journey for frontend applications, as implemented by this blog’s final code samples:
+Previously I summarised some backend technical behaviours in <Link href='/posts/api-journey-server-side'>API Journey – Server Side</Link>. Next I take a look at the API journey for frontend applications, which this blog’s final frontend code samples implement in multiple technologies:
 
 - <Link href='/posts/final-spa-overview'>Final React SPA</Link>
 - <Link href='/posts/final-desktop-sample-overview'>Final Electron Desktop App</Link>
@@ -9,7 +9,7 @@ Previously we took a look at some backend technical behaviours in <Link href='/p
 
 ### Configuration
 
-OAuth clients typically start by loading their configuration, which provides details such as backend base URLs. For native apps this includes OAuth client settings:
+OAuth clients typically load their configuration at startup, to get details such as API base URLs and OAuth settings. A native app might use the following example configuration settings:
 
 ```json
 {
@@ -31,7 +31,7 @@ OAuth clients typically start by loading their configuration, which provides det
 
 ### Views
 
-In most modern frontend technology stacks, the UI usually starts with a main view or application shell:
+In most modern frontend technology stacks, the application usually starts with a main view or application shell:
 
 ```jsx
 const root = ReactDOM.createRoot(document.getElementById('root') as HTMLElement);
@@ -46,7 +46,7 @@ root.render (
 );
 ```
 
-The shell then lays out a tree of views, and some of them will call APIs when they load. This results in multiple API requests that execute or are in-flight concurrently:
+The shell then lays out a tree of views, some of which call APIs when they load. This results in multiple API requests that execute or are in-flight concurrently:
 
 ```jsx
 <>
@@ -68,7 +68,7 @@ The shell then lays out a tree of views, and some of them will call APIs when th
 
 ### This Blog’s Example Views
 
-This blog’s final UIs are all pretend apps based on a theme of protecting money based data. The business area is one of investments, that are administered by some kind of manager. There are two users, where the first has business permissions to one region:
+This blog’s frontend code samples are fictional apps based on a theme of protecting money-based data. The business area is *investments*, where *company* and *transaction* resources are administered by some kind of *manager*. There are two users, where the first has business permissions to one region:
 
 ![guest user](/images/270/guest-user.jpg)
 
@@ -76,26 +76,26 @@ The second user has higher privileges, for multiple regions:
 
 ![guest admin](/images/270/guest-admin.jpg)
 
-The API’s authorization filters resources using claims, so that the first user only sees American data. A transactions view also exists, where access is denied if the first user tries to change the browser URL to a non-American resource:
+The first view displays a collection of *company* resources that APIs filter to only return authorized items for the user. The second view shows *transactions* for an individual *company*, as represented by the ID in the browser's URL. The user is denied access if the browser URL is changed to an unauthorized resource:
 
 ![transactions](/images/270/transactions.jpg)
 
-The API uses the following user attributes and the UI aims to visualise the use of claims:
+The API uses the following user attributes and frontend views visualise the use of claims:
 
 | User Attribute | Represents |
 | -------------- | ---------- |
-| <span style={{color:'green'}}>**Scope**</span> | The main scope in the client’s access token is called *investments* to represent the app’s business area. |
-| <span style={{color:'green'}}>**Manager ID**</span> | The API receives its business user identity in access tokens sent by the client, though the UI does not use this value. |
-| <span style={{color:'green'}}>**Role**</span> | This is used for API authorization, and grants the admin role access to all regions shown in the UI. The role is stored in identity data and is issued to access tokens. |
-| <span style={{color:'green'}}>**Regions**</span> | This is used for API authorization, and only allows other users access to their region(s). It is meant to represent a finer grained business permission not issued to the access token. |
-| <span style={{color:'green'}}>**Name**</span> | The UI downloads data from the OAuth user info endpoint, then displays the *given_name* and *family_name* fields. |
-| <span style={{color:'green'}}>**Title**</span> | In the example, the user title is also stored outside the identity data. The UI displays this and the user’s regions in a tooltip. Both are downloaded from an API user info endpoint. |
+| <span style={{color:'green'}}>**Scope**</span> | The main scope in the client’s access token is called *investments* to represent a business area. |
+| <span style={{color:'green'}}>**Manager ID**</span> | The API receives a useful business user identity in access tokens sent by the client. |
+| <span style={{color:'green'}}>**Role**</span> | The authorization server stores a role claim for each user, with values of *admin* or *user*, and issues it to access tokens. |
+| <span style={{color:'green'}}>**Regions**</span> | APIs use an array of allowed regions as an example of fine-grained business permissions not issued to access tokens. |
+| <span style={{color:'green'}}>**Name**</span> | Clients download data from the OpenID Connect userinfo endpoint, then display the *given_name* and *family_name* fields. |
+| <span style={{color:'green'}}>**Title**</span> | The title is an example product-specific user attribute which clients display in a tooltip. |
 
-This use of claims is similar to that in any moderately complex real world system, where some <Link href='/posts/user-data'>user attributes</Link> will be stored in the identity data and others in the business data. The UI and API operate on both types of user attribute, in a way that is easy for a software company to extend.
+This use of claims is similar to that in any moderately complex real-world system, with some <Link href='/posts/user-data'>user attributes</Link> stored in the identity data and others in the business data. Clients and APIs operate on both types of user attribute, in a way that you can easily extend.
 
 ### Views, Models and Data Loading
 
-For a React app, the code to load a view that calls APIs looks similar to this. The view asks its view model to fetch data from APIs. This is done in an async manner, to avoid blocking the UI thread. The view also binds to the model’s data, or renders an error when API requests fail unexpectedly:
+For a React app, I use code similar to the following to load views and call APIs. The view asks its view model to fetch data from APIs, which takes place asynchronously to avoid blocking the UI thread. The view then binds to the model’s data, or renders an error when API requests fail unexpectedly:
 
 ```typescript
 export function CompaniesContainer(props: CompaniesContainerProps): JSX.Element {
@@ -131,7 +131,7 @@ export function CompaniesContainer(props: CompaniesContainerProps): JSX.Element 
 }
 ```
 
-The view model then calls a lower level fetch client to do the work of calling the API. It then updates its data, causing the view to re-render:
+The view model calls a lower-level fetch client to do the work of calling the API, then updates data bound to the view, which triggers a rendering update:
 
 ```typescript
 public async callApi(options?: ViewLoadOptions): Promise<void> {
@@ -167,9 +167,9 @@ public async callApi(options?: ViewLoadOptions): Promise<void> {
 
 ### View Recreation
 
-In modern UI stacks such as React, Android Jetpack or Swift UI, views can be recreated many times, but view models and data should be created only once. To re-enforce this, React strict mode (in debug builds) immediately re-runs the view while the async code in the useEffect hook is executing.
+In modern frontend stacks like React, Android Jetpack Compose or Swift UI, views get recreated many times, but you create view models and data only once. To enforce this, React strict mode immediately re-creates each view while any async code in the *useEffect* hook executes. The idea is to force developers to write efficient clients that only send necessary APIs requests. 
 
-This causes a duplicate API request, and the idea is to force developers to write efficient UIs, that avoid unnecessary APIs requests. This leads to a design of caching API responses in the frontend, in a thread safe dictionary, with a URL based cache key:
+I therefore cache API responses to HTTP GET requests in the frontend, in a thread safe dictionary with a URL based cache key. When an HTTP GET response exists already in the fetch cache, I therefore avoid the overhead of an API request. The caching makes the views feel fast during forward or back navigation, and also lightens the load on APIs.
 
 ```typescript
 export class FetchCache {
@@ -177,23 +177,19 @@ export class FetchCache {
 }
 ```
 
-This blog’s final UIs all follow this approach. The user is also given a reload option, which is broadcast to views using a publish subscribe mechanism, such as an in-memory event bus. The caching makes the views feel fast during forward or back navigation, and also lightens the load on APIs.
+### Detecting Login Required
 
-### The Initial Login Redirect
+When frontends first make API requests, they do not have an API message credential so cannot call APIs. The fetch client throws a *login_required* error which the fetch cache stores. Multiple views could throw this error at the same time so a *ViewModelCoordinator* object waits for all views to try to load, then inspects the fetch cache. When required, it publishes an event that the main view subscribes to. The main view's handler then triggers a login redirect.
 
-During the initial API request, the views do not have an API message credential so cannot call APIs. This is managed by the fetch client throwing a *login_required* error, which is stored in the fetch cache.
+### Running a Code Flow
 
-Multiple views could throw this error at the same time. Therefore a *ViewModelCoordinator* object is notified after each view has tried to load. Once all view models have executed, this object inspects the fetch cache and sends a single event when required, to trigger a login redirect.
+To get a correct access token for the user, the client must run an OpenID Connect authorization code flow, to initiate user authentication. To do the work, I aim to plug in a respected standards-based third-party library, or backend for frontend in the case of the SPA.
 
-### Security Libraries
+I wrap the use of libraries in an *Authenticator* interface that is useful to the rest of the application's code. In the event of library limitations or problems you could swap out the implementation without impacting the rest of the app. If required, it is fairly easy to write your own logic that implements a code flow and other lifecycle operations.
 
-The OAuth work for the UI must then be performed, to trigger an OpenID Connect code flow. This is done by plugging in a third party library, or backend for frontend in the case of the SPA. By default, I aim to use a respected standards-based library.
+### Login User Experience
 
-This blog’s final UIs  wrap use of libraries in an *AuthenticatorImpl* class. In the event of library limitations or problems it could be swapped out, without impacting the rest of the app. If required, the logic to implement a code flow and other lifecycle operations is fairly easy to code manually.
-
-### The Login Flow
-
-The login flow looks different for web, desktop and mobile platforms. For a web client the entire browser window is redirected. This blog’s default authorization server is configured to use only basic password logins:
+User logins appear slightly differently for web, desktop and mobile platforms and in all cases I only demonstrate simple password-based logins. For a web client I redirect the entire browser window.
 
 ![web login](/images/270/web-login.jpg)
 
@@ -203,31 +199,29 @@ For mobile clients an integrated browser overlays the views, which wait on the r
 ![mobile login](/images/270/mobile-login.jpg)
 </div>
 
-For a desktop client, the app renders a *login in progress* window, while the user signs in via a disconnected system browser:
+For a desktop client, the app renders a *login in progress* window, while the user signs in with a disconnected system browser:
 
 ![desktop login](/images/270/desktop-login.jpg)
 
-After login, the previous frontend views retry API requests. Session cookies are written for the SPA, which are discarded when all browser windows are closed. For native apps, tokens are instead saved to operating system secure storage, to avoid a re-login on every application restart.
+After login, the frontend client has an API message credential and can make API requests. The final SPA transports access tokens using cookies that expire when the user closes all browser windows. Native apps instead save tokens using operating system secure storage, to avoid a re-login on every application restart.
 
-### Applications Support any Authentication Method
-
-Although password logins are used, use of a code flow means that all apps support <Link href='/posts/federated-logins'>any form of user authentication</Link> the authorization server supports.  Changing authentication should usually require zero code changes to applications, and the API identity in access tokens should stay the same.
+Although I only demonstrate password logins, use of a code flow means that all of this blog's clients support <Link href='/posts/federated-logins'>any form of user authentication</Link> that the authorization server supports.  Changing authentication should usually require zero code changes to applications.
 
 ### Concurrent API Requests
 
-Views send an API credential to get data, representing the access token. The final UIs send an API request to get the current main view’s data, as well as two small API requests to get user info for the upper right view:
+This blog's final clients send an API request to get the current main view’s data, as well as two small API requests to get user info for the upper right view:
 
 ![concurrent api requests](/images/270/concurrent-api-requests.jpg)
 
-The user can then navigate around views to trigger further API calls, if that view’s data has not been loaded yet. A forced reload of data is possible by clicking the reload button, which re-runs the 3 API requests concurrently.
+The user can then navigate around views to trigger further API calls, if that view’s data is not yet loaded. A forced reload of data is possible by clicking the reload button, which re-runs the 3 API requests concurrently.
 
 ### Expiry Events
 
-At some point the token used to call APIs will expire. This can be rehearsed by clicking *Expire Access Token* followed by *Reload Data*. Doing so triggers 3 API requests that fail with a 401 error. This is followed by a synchronized token refresh, after which the API requests are retried and succeed:
+At some point the access token sent to APIs expires. You can rehearse this by clicking *Expire Access Token* followed by *Reload Data*. This triggers three concurrent API requests that fail with a 401 error, followed by a single synchronized token refresh request. The client then retries all API requests with its new access token:
 
 ![synchronized refresh](/images/270/synchronized-refresh.jpg)
 
-Any resilient client should support this behaviour, since there could be multiple reasons why an access token is rejected by APIs with a 401 error. This blog manages synchronized token refresh as follows:
+Any resilient client should support this behaviour, since there could be multiple reasons why APIs reject access tokens with a 401 error. When multiple views call APIs concurrently you must also synchronize token refresh to prevent race conditions with single-use refresh tokens. This blog's clients do so using a concurrency handler utility object:
 
 ```typescript
 public async synchronizedRefresh(): Promise<void> {
@@ -278,11 +272,11 @@ public async execute(action: () => Promise<void>): Promise<void> {
 }
 ```
 
-Eventually the UI’s refresh token will also expire. This can be simulated by clicking *Expire Refresh Token* followed by *Reload Data*. The token refresh request then returns an *invalid_grant* error code. The UI then triggers another login redirect, in the same way as the initial login redirect.
+Eventually the client's refresh token also expires. This can be simulated by clicking *Expire Refresh Token* followed by *Reload Data*. The token refresh request then returns an *invalid_grant* error code. The client then triggers another login redirect, in the same way as the initial login redirect.
 
 ### Deep Linking
 
-All of this blog’s UIs support deep linking, to enable users to bookmark locations within the app. Some example deep linked URLs for each platform are shown here:
+All of this blog’s UIs support deep linking, to enable users to bookmark locations within the app. An example deep linking URL for each of the final clients is shown here:
 
 | Client Type | Deep Linking URL |
 | ----------- | ---------------- |
@@ -291,61 +285,49 @@ All of this blog’s UIs support deep linking, to enable users to bookmark locat
 | <span style={{color:'green'}}>**Android**</span> | *https://mobile.authsamples.com/finalmobileapp/deeplink/companies/2* |
 | <span style={{color:'green'}}>**iOS**</span> | *https://mobile.authsamples.com/finalmobileapp/deeplink/companies/2* |
 
-These commands trigger views to run, which may then trigger API requests. These could fail if an access token needs refreshing, or the user needs to re-authenticate. In such cases this blog’s UIs return to the requested view once any OAuth work is complete.
+These commands initiate views which in turn initiate API requests. APIs return 401 responses if an access token expires or if the user needs to re-authenticate. In such cases this blog’s frontends always run the requested view once any OAuth work is complete, so that bookmarking works correctly for users.
 
-### UIs and APIs are Supportable
+### Clients and APIs are Supportable
 
-UIs and APIs will follow this blog’s approach to <Link href='/posts/error-handling-and-supportability'>Error Handling and Supportability</Link>. API requests, or OAuth operations that they trigger, could fail, in which case the view renders an error link. API 500 errors can be rehearsed by long pressing the *Reload Data* button for a few seconds:
+Clients and APIs follow this blog’s approach to <Link href='/posts/error-handling-and-supportability'>Error Handling and Supportability</Link>. API or OAuth requests could fail, in which case the view renders an *Error Summary* link. You can rehearse API 500 errors by long-pressing the *Reload Data* button for a few seconds:
 
 ![error summary](/images/270/error-summary.jpg)
 
-Clicking a link invokes an *Error Details* display that provides hints to technical support staff on the cause. For API exceptions an *Error ID* is shown, which references an entry in API logs, to enable details to be quickly looked up:
+Clicking an *Error Summary* link invokes an *Error Details* dialog that provides hints to technical support staff on the cause. When API exceptions occur, clients receive an *Error ID* in the response, which references an entry in API logs. The client renders this value to help enable fast incident resolution:
 
 ![error detail](/images/270/error-detail.jpg)
 
-The *API Session ID* shown in the browser is nothing to do with OAuth, but could be used to enable a technical user of the SPA to query the API logs their session generates. See the <Link href='/posts/api-technical-support-analysis'>Technical Support Analysis</Link> post for details.
+The *API Session ID* shown in the browser is nothing to do with OAuth or security. Instead, it enables a technical user of the SPA to query the API logs their session generates. See the <Link href='/posts/api-technical-support-analysis'>Technical Support Analysis</Link> post for details.
 
 ### Clients Handle Advanced Failures
 
-OAuth clients can experience some advanced failure scenarios that are difficult to reason about, due to the three way relationship between the client, the  APIs it calls and the authorization server. The best way to deal with error events reliably is to rehearse them.
+OAuth clients can experience some advanced failure scenarios that can be difficult to reason about, due to the three way relationship between the client, the  APIs it calls and the authorization server. The best way to deal with error events reliably is to rehearse them.
 
 | Failure Scenario | Resilient Application Behaviour |
 | ---------------- | ------------------------------- |
-| <span style={{color:'red'}}>Key Renewal</span> | Token signing keys, or cookie encryption keys used by SPAs, are sometimes renewed in an abrupt way. This blog’s clients manage this by receiving 401 response in API requests, after which token refresh fails with a session expired error. This causes a new login redirect and avoids user errors. |
-| <span style={{color:'red'}}>Redirect Loops</span> | This blog’s apps don’t trigger an authorization redirect when a 401 error is returned from APIs. Instead, redirects only occur when there is no access token yet or if token refresh fails with a session expired error. Doing so prevents the possibility of redirect loops. |
-| <span style={{color:'red'}}>Invalid Tokens</span> | OAuth configuration mistakes can cause clients to be issued invalid access tokens that are rejected by APIs, even though token refresh works. The client should then present an error, but clear token state. Once configuration is fixed, the user can trigger a new authorization redirect, after which the client receives corrected tokens. |
+| <span style={{color:'red'}}>Key Renewal</span> | Token signing keys, or cookie encryption keys used by SPAs, are sometimes renewed in an abrupt way. This blog’s clients handle 401 API responses after which token refresh would fail with a session expired error. This causes a new login redirect and avoids user errors. |
+| <span style={{color:'red'}}>Redirect Loops</span> | This blog’s apps don’t trigger an authorization redirect when APIs return permanent 401 errors. Instead, redirects only occur when there is no access token yet or if token refresh fails with a session expired error. Doing so prevents the possibility of redirect loops. |
+| <span style={{color:'red'}}>Invalid Tokens</span> | OAuth configuration mistakes can result in access tokens that APIs permanently reject, even though token refresh works. The client should then present an error, but clear token state. The client can then prompt the user to run a new authorization redirect. This enables the client to get a corrected access token and avoids the user being stuck. |
 
 ### Client Responsibilities are Separated
 
-This blog’s final UIs are coded in multiple technologies. The code is largely identical regardless of  the programming language or platform, since all implementations have the same application behaviour:
-
-- A Single Page Application developed in <Link href='/posts/reactjs-codingkeypoints'>React</Link>
-- A Desktop App developed in <Link href='/posts/final-desktop-sample-overview'>Electron</Link>
-- Mobile Apps developed in <Link href='/posts/android-code-sample-overview'>Kotlin</Link> and <Link href='/posts/ios-code-sample-overview'>Swift</Link>
-
-In order to provide the behaviours articulated on this page, some plumbing code is needed. A folder structure is used that starts by classifying each class as either *view* related or *plumbing* related.
+To provide the behaviours that I articulate, this blog's API require some plumbing code. A folder structure classifies each class as *view* related or *plumbing* related. In real clients you might externalise some of the plumbing to one or more shared libraries. The goal in a real organization would be to use clean, scalable code for the valuable views and view models.
 
 <div className="smallimage">
 ![code layout](/images/270/code-layout.jpg)
 </div>
 
-The goal in a real company would be to grow the views and view models. It should be possible to externalize some of the plumbing to one or more shared libraries, so that the frontend code is mostly business focused.
-
 ### Developers Run a Productive Setup
 
-All frontends can be developed in isolation, and pointed to remote API URLs. This includes deploying a remote backend for frontend to enable productive SPA development.
+This blog's client development setup enables you to run client code while pointing to remote API URLs. This includes deploying a remote backend for frontend to enable productive SPA development. You run end-to-end setups with URLs that use SSL and domain names. This best enables deployment related thinking during development.
 
-![spa and api](/images/270/spa-and-api.jpg)
-
-The development samples use SSL connections to backend components, with realistic domain names. This best enables deployment related thinking during development. I avoid URLs such as *http://localhost:3000* for most development.
+![spa and api](/images/270/spa-and-api.jpg?v=20240911)
 
 ### Where Are We?
 
-This post has summarised a non-functional journey for API clients whose complexity is not caused by OAuth. The same intricacies would exist if any other security framework was used.
-
-In this blog,  the difficult areas are dealt with as early as possible in the software pipeline, on a development computer. Doing so should improve quality and result in more predictable business delivery.
+I summarised a non-functional journey for clients, where OAuth does not create the complexity. The same intricacies would exist with any other security framework. In this blog, I deal with foundational areas as early as possible in the software pipeline, on a development computer. Doing so should improve quality and result in more predictable business delivery.
 
 ### Next
 
-- The next post moves on to this blog’s <Link href='/posts/effective-api-logging'>Effective API Logging</Link> design
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
+- Next I explain this blog’s <Link href='/posts/effective-api-logging'>Effective API Logging</Link> design.
+- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
