--- a/posts/azure-active-directory-setup.mdx
+++ b/posts/azure-active-directory-setup.mdx
@@ -155,7 +155,7 @@ My two custom user attributes are extension attributes with the following full t
 
 ### Step 7. Issue Custom Access Token Claims
 
-To customize access tokens you edit the API client registration, starting by selecting the following link. My code sample avoids customizing ID tokens, but to do so you would follow an equivalent process for the SPA client registration:
+To customise access tokens you edit the API client registration, starting by selecting the following link. My code sample avoids customising ID tokens, but to do so you would follow an equivalent process for the SPA client registration:
 
 ![edit api client](/images/190/edit-api-client.jpg)
 
