--- a/posts/basicapi-codingkeypoints.mdx
+++ b/posts/basicapi-codingkeypoints.mdx
@@ -221,7 +221,7 @@ public async execute(request: Request): Promise<ClaimsPrincipal> {
 }
 ```
 
-The API must provide correct inputs to the library, so it is important for API developers to understand the inputs. These are summarized in a separate <Link href='/posts/jwt-access-token-validation'>Access Token Validation</Link> post.
+The API must provide correct inputs to the library, so it is important for API developers to understand the inputs. These are summarised in a separate <Link href='/posts/jwt-access-token-validation'>Access Token Validation</Link> post.
 
 ### Claims Principal
 
@@ -405,5 +405,5 @@ The initial API integrates with an authorization server and validates JWTs corre
 
 ### Next
 
-- Next I summarize how to work with <Link href='/posts/jwt-access-token-validation'>JWT Access Token Validation</Link> in APIs.
+- Next I summarise how to work with <Link href='/posts/jwt-access-token-validation'>JWT Access Token Validation</Link> in APIs.
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
