--- a/posts/desktop-app-coding-key-points.mdx
+++ b/posts/desktop-app-coding-key-points.mdx
@@ -232,7 +232,7 @@ public async login(redirectUri: string): Promise<LoginRedirectResult> {
 }
 ```
 
-### Customizing the Authorization Handler
+### Customising the Authorization Handler
 
 AppAuth-JS provides the following concrete class for managing authorization redirects:
 
