--- a/posts/effective-api-logging.mdx
+++ b/posts/effective-api-logging.mdx
@@ -168,7 +168,7 @@ In your own APIs it may make sense to instead use the built-in logging configura
 
 By default, this blog’s APIs output production JSON logs at all stages of the pipeline, including development computers. When required, developers can temporarily change to a logger per class configuration.
 
-### Logging Framework Customization
+### Logging Framework Customisation
 
 Logging frameworks typically implement JSON logging by first adding their own fields, then encoding the JSON payload into a *message* field. This blog instead uses pure JSON, for best readability on development computers. In the API implementations, there is quite a bit of plumbing code to enable my exact preferred behaviour. It can be worth the effort though, to enable the best readability for users of logs.
 
