--- a/posts/id-tokens.mdx
+++ b/posts/id-tokens.mdx
@@ -45,7 +45,7 @@ One of the main ways to use an ID token, is to take greater control over subsequ
 
 ### Where Are We?
 
-I summarized a few points about ID tokens, which provide verifiable proof of the authentication event to clients. All modern secured frontends should receive an ID token as part of using up-to-date security.
+I summarised a few points about ID tokens, which provide verifiable proof of the authentication event to clients. All modern secured frontends should receive an ID token as part of using up-to-date security.
 
 ### Next
 
