--- a/posts/net-core-api-oauth-integration.mdx
+++ b/posts/net-core-api-oauth-integration.mdx
@@ -42,14 +42,14 @@ When getting started with OAuth secured APIs you should use these defaults. Yet 
 
 ### Deeper Requirements
 
-This blog’s .NET API will focus on customizing default behaviour in order to meet the following requirements:
+This blog’s .NET API will focus on customising default behaviour in order to meet the following requirements:
 
 | Requirement | Description |
 | ----------- | ----------- |
 | <span style={{color:'green'}}>**Standards Based**</span> | We will use the same standards-based design patterns for OAuth security across Node.js, .NET and Java APIs. |
 | <span style={{color:'green'}}>**Best Security**</span> | The [jose-jwt](https://github.com/dvsekhvalnov/jose-jwt) library will enable the most up to date and specialised security algorithms when dealing with JWTs. |
 | <span style={{color:'green'}}>**Extensible Claims**</span> | APIs are in full control of the claims principal, to work around authorization server limitations or add values that should not be issued to access tokens. |
-| <span style={{color:'green'}}>**Supportable**</span> | Identity and error details will be captured and included in logs, and JSON error responses will be customizable. |
+| <span style={{color:'green'}}>**Supportable**</span> | Identity and error details will be captured and included in logs, and JSON error responses will be customisable. |
 
 In .NET our OAuth code will follow the same phases that are used by all of this blog’s APIs:
 
@@ -126,7 +126,7 @@ private void ConfigureOAuth(IServiceCollection services)
 }
 ```
 
-The implementation's main logic calls an *OAuthFilter* object, which ensures that the JWT access token is validated and that claims used for authorization can be controlled. The handler then customizes API logs and error responses.
+The implementation's main logic calls an *OAuthFilter* object, which ensures that the JWT access token is validated and that claims used for authorization can be controlled. The handler then customises API logs and error responses.
 
 ```csharp
 protected override async Task<AuthenticateResult> HandleAuthenticateAsync()
