--- a/posts/serverless-api-coding-model.mdx
+++ b/posts/serverless-api-coding-model.mdx
@@ -210,7 +210,7 @@ export class AwsCache implements Cache {
 }
 ```
 
-### OAuth Middleware Customization
+### OAuth Middleware Customisation
 
 The API authorizes using this blog’s <Link href='/posts/api-authorization-design'>API Authorization Behaviour</Link>. This involves looking up and caching the following extra claims when an access token is first received.
 
