--- a/posts/spring-boot-api-oauth-integration.mdx
+++ b/posts/spring-boot-api-oauth-integration.mdx
@@ -38,14 +38,14 @@ When getting started with OAuth secured APIs you should use these defaults. Yet 
 
 ### Deeper Requirements
 
-This blog’s Java API will focus on customizing Spring’s default behaviour in order to meet the following requirements:
+This blog’s Java API will focus on customising Spring’s default behaviour in order to meet the following requirements:
 
 | Requirement | Description |
 | ----------- | ----------- |
 | <span style={{color:'green'}}>**Standards Based**</span> | We will use the same standards-based design patterns for OAuth security across Node.js, .NET and Java APIs. |
 | <span style={{color:'green'}}>**Best Security**</span> | The [jose4j library](https://bitbucket.org/b_c/jose4j/wiki/Home) will enable the most up to date and specialised security algorithms when dealing with JWTs. |
 | <span style={{color:'green'}}>**Extensible Claims**</span> | APIs are in full control of the claims principal, to work around authorization server limitations or add values that should not be issued to access tokens. |
-| <span style={{color:'green'}}>**Supportable**</span> | Identity and error details will be captured and included in logs, and JSON error responses will be customizable. |
+| <span style={{color:'green'}}>**Supportable**</span> | Identity and error details will be captured and included in logs, and JSON error responses will be customisable. |
 
 In Java our API’s OAuth code will follow the same two phases that we used in Node.js and .NET APIs:
 
@@ -254,7 +254,7 @@ private boolean isUserAuthorizedForCompany(final Company company) {
 }
 ```
 
-### OAuth Middleware Customization
+### OAuth Middleware Customisation
 
 An *OAuthFilter* class encapsulates the overall OAuth work and deals with injecting claims into the claims principal when needed. In Spring it is also possible to add extra claims in a custom [JwtAuthenticationConverter](https://www.baeldung.com/spring-security-map-authorities-jwt#using_custom_jwtauthenticationconverter).
 
