--- a/posts/updated-api-coding-key-points.mdx
+++ b/posts/updated-api-coding-key-points.mdx
@@ -1,6 +1,6 @@
 # Updated API – Code Overview
 
-The previous post I provided an <Link href='/posts/updated-spa-coding-key-points'>SPA Code Overview</Link> for the second code sample. Next I summarize the main API code changes.
+The previous post I provided an <Link href='/posts/updated-spa-coding-key-points'>SPA Code Overview</Link> for the second code sample. Next I summarise the main API code changes.
 
 ### API Authorization Implementation
 
@@ -63,9 +63,9 @@ private _isUserAuthorizedForCompany(company: Company): boolean {
 }
 ```
 
-### OAuth Middleware Customization
+### OAuth Middleware Customisation
 
-The API’s claims are customized to include additional finer-grained authorization values:
+The API’s customised claims include additional fine-grained authorization values:
 
 ```typescript
 export class ClaimsPrincipal {
