--- a/posts/user-data.mdx
+++ b/posts/user-data.mdx
@@ -1,6 +1,6 @@
 # User Data Management
 
-In the previous post I explained <Link href='/posts/developer-ssl-setup'>SSL Trust Configuration</Link> for a development computer. Next, I summarize some practicalities of user management in an OAuth Architecture. In many setups identity data and business data need to work together.
+In the previous post I explained <Link href='/posts/developer-ssl-setup'>SSL Trust Configuration</Link> for a development computer. Next, I summarise some practicalities of user management in an OAuth Architecture. In many setups identity data and business data need to work together.
 
  ### User Attributes in Business Data
 
@@ -49,7 +49,7 @@ Any authorization server should enable you to issue access token claims stored a
 
 ### User Management Operations
 
-You may also need to call the authorization server’s user management APIs for other use cases, as summarized in the following table. In at least some cases, you may need to design how to save attributes to both the identity data and to business data:
+You may also need to call the authorization server’s user management APIs for other use cases, as summarised in the following table. In at least some cases, you may need to design how to save attributes to both the identity data and to business data:
 
 | Use Case | Description |
 | -------- | ----------- |
